# python-intermediate-inflammation

./: inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: test_compute_data.py  test_models.py
